2003-05-04  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyPgSQLcache.py: typo fixes.

	* SkunkWeb/Services/pypgsqlcache.py: typo fix.

2003-05-02    <drew@loki.sai-office>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.response): 
	fix for stupidity error

2003-05-02  Jacob Smullyan  <jsmullyan@wnyc.org>

	* INSTALL (systems): added to list of supported OSes.

2003-05-02    <drew@loki.sai-office>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.response): now 
	supports byte range requests.

	* SkunkWeb/sw.conf.in: added the long unmentioned 
	mergeQueryStringWithPostData option as well as textCompression
	and generateEtagHeader.

	* SkunkWeb/Services/templating/Handler.py (plainHandler): added 
	Last-Modified header and checking

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.response): 
	added configurable gzip compression of text types and generation
	of etag headers

	* README: removed license interpretation paragraph copied from -ack-
	Perl

	* SkunkWeb/Makefile.in: fix for swpython.c, installs precompile.py
	
	* SkunkWeb/precompile.py.in: added
	
	* SkunkWeb/configure: regenerated
	
	* SkunkWeb/configure.in: added stuff for util/precompile.py
	
	* SkunkWeb/swpython.c.in: added and fixed

	* SkunkWeb/swpython.c: removed, added wrong file
	
	* SkunkWeb/swpython.py.in (else): fixed sys.argv handling

	* SkunkWeb/Services/requestHandler/requestHandler.py (_canRead): added
	try block to ignore a socket error so it doesn't get logged.

	* SkunkWeb/configure: regenerated

	* SkunkWeb/Makefile.in: addd stuff for swpython.c.in

	* SkunkWeb/configure.in: added stuff for swpython.c.in

	* SkunkWeb/swpython.c: added

	* NEWS: updated re: swpython
	

2003-05-01    <drew@loki.sai-office>

	* README: changed license stuff

	* SkunkWebLicense: added
	
	* every file with a copyright header: changed license
	
	* configure.in:  HP-UX fix for install problems

	* configure.in, SkunkWeb/configure.in: now works if python is not